--- a/template/template.html
+++ b/template/template.html
@@ -7,7 +7,7 @@
     <link href="../css/template.css" rel="stylesheet">
     <link href="../node_modules/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   </head>
-  <body class="bg-primary bg-opacity-10">
+  <body class="bg-body-tertiary">
 
     <nav class="navbar navbar-expand-lg sticky-top bg-white shadow-sm py-3">
         <div class="container-fluid">
@@ -39,8 +39,8 @@
     <div class="container-fluid">
         <div class="row">
             <div id="sidebar-container" class="col-lg-2 d-none d-lg-block bg-white shadow">
-                <div id="sidebar-inner" class="d-flex flex-column p-3">
-                    <button id="network-select" type="button" class="btn btn-light btn-lg border border-primary-subtle shadow-sm">
+                <div id="sidebar-inner" class="d-flex flex-column p-3 pt-5">
+                    <button id="network-select" type="button" class="btn btn-light btn-lg border shadow-sm">
                         <div class="d-flex">
                             <img class="icon d-none d-xl-inline" src="../image/Ethereum.svg" alt="network">
                             <div class="flex-grow-1">Ethereum</div>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 ms-lg-auto p-4">
+            <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="bg-body p-3 rounded shadow mb-4">
                     <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
