--- a/css/template.scss
+++ b/css/template.scss
@@ -1,15 +1,64 @@
+@import "bootstrap/scss/mixins/banner";
+@include bsBanner("");
+
+// Configuration
 @import "bootstrap/scss/functions";
 
-$compound-color: rgb(0, 211, 149);
-
-$primary: shade-color($compound-color, 5%);
-
-$theme-colors: (
-    "primary": $primary
-);
+// Include any default variable overrides here
+$primary: shade-color(rgb(0, 211, 149), 5%);
 
 @import "bootstrap/scss/variables";
-@import "bootstrap/scss/bootstrap";
+@import "bootstrap/scss/variables-dark";
+
+// Include any default map overrides here
+/*$custom-colors: (
+  "compound": shade-color(rgb(0, 211, 149), 5%)
+);
+$theme-colors: map-merge($theme-colors, $custom-colors);*/
+
+@import "bootstrap/scss/maps";
+@import "bootstrap/scss/mixins";
+@import "bootstrap/scss/utilities";
+
+// Layout & components
+@import "bootstrap/scss/root";
+@import "bootstrap/scss/reboot";
+@import "bootstrap/scss/type";
+@import "bootstrap/scss/images";
+@import "bootstrap/scss/containers";
+@import "bootstrap/scss/grid";
+@import "bootstrap/scss/tables";
+@import "bootstrap/scss/forms";
+@import "bootstrap/scss/buttons";
+@import "bootstrap/scss/transitions";
+@import "bootstrap/scss/dropdown";
+@import "bootstrap/scss/button-group";
+@import "bootstrap/scss/nav";
+@import "bootstrap/scss/navbar";
+@import "bootstrap/scss/card";
+@import "bootstrap/scss/accordion";
+@import "bootstrap/scss/breadcrumb";
+@import "bootstrap/scss/pagination";
+@import "bootstrap/scss/badge";
+@import "bootstrap/scss/alert";
+@import "bootstrap/scss/progress";
+@import "bootstrap/scss/list-group";
+@import "bootstrap/scss/close";
+@import "bootstrap/scss/toasts";
+@import "bootstrap/scss/modal";
+@import "bootstrap/scss/tooltip";
+@import "bootstrap/scss/popover";
+@import "bootstrap/scss/carousel";
+@import "bootstrap/scss/spinners";
+@import "bootstrap/scss/offcanvas";
+@import "bootstrap/scss/placeholders";
+
+// Helpers
+@import "bootstrap/scss/helpers";
+
+// Utilities
+@import "bootstrap/scss/utilities/api";
+
 
 $sidebar-pt: 90px;
 $sidebar-font-size: $font-size-base * 1.075;
