--- a/css/template.scss
+++ b/css/template.scss
@@ -88,3 +88,6 @@ body { overflow-y: scroll; }
         }
     }
 }
+
+/* CLAIM */
+#claim-accordion .accordion-button::after { margin-left: inherit; }
