--- a/template/template.3.html
+++ b/template/template.3.html
@@ -26,11 +26,12 @@
                     <li class="nav-item"><a class="nav-link" href="#">Claim</a></li>
                 </ul>
                 <div class="btn-group shadow-sm ms-auto" role="group">
-                    <button type="button" class="btn btn-outline-primary">Compound II</button>
-                    <button type="button" class="btn btn-primary text-white" aria-current="page">Compound III</button>
+                    <button type="button" class="btn btn-outline-light text-body">Compound II</button>
+                    <button type="button" class="btn btn-light text-body" aria-current="page">Compound III</button>
                 </div>
-                <div class="d-none d-lg-block ms-2">
-                    <button class="btn btn-outline-primary shadow-sm" type="button"><i class="bi bi-wallet me-1"></i> Connect wallet</button>
+                <div class="d-none d-lg-block ms-4">
+                    <button class="btn btn-primary text-white shadow-sm" type="button"><i class="bi bi-wallet me-1"></i> 0x23....46ac</button>
+                    <button class="btn btn-primary text-white shadow-sm" type="button"><i class="bi bi-power"></i></button>
                 </div>
             </div>
         </div>
