--- a/template/template.5.html
+++ b/template/template.5.html
@@ -27,25 +27,25 @@
                 </ul>
                 <div class="d-flex mx-auto text-center">
                 <div class="px-4">
-                    <div class="pb-1">Borrowing</div> 
-                    <div class="small text-body-secondary">$1.78K</div>
+                    <div class="fw-semibold">Borrowing</div> 
+                    <div class="text-body-secondary">$1.78K</div>
                 </div>
                 <div class="px-4">
-                    <div class="pb-1">Farming</div> 
-                    <div class="small text-body-secondary">$2.78K</div>
+                    <div class="fw-semibold">Farming</div> 
+                    <div class="text-body-secondary">$2.78K</div>
                 </div>
                 <div class="px-4">
-                    <div class="pb-1">Net APR</div> 
-                    <div class="small text-body-secondary">4.56%</div>
+                    <div class="fw-semibold">Net APR</div> 
+                    <div class="text-body-secondary">4.56%</div>
                 </div>
                 <div class="px-4">
-                    <div class="pb-1">Rewards</div> 
-                    <div class="small text-body-secondary">12.898 <span class="" style="font-size: 75%">COMP</span></div>
+                    <div class="fw-semibold text-primary">Rewards</div> 
+                    <div class="">12.898 <span class="" style="font-size: 75%">COMP</span></div>
                 </div>
                 </div>
                 <div class="btn-group shadow-sm" role="group">
-                    <button type="button" class="btn btn-outline-light text-body">Compound II</button>
-                    <button type="button" class="btn btn-light text-body" aria-current="page">Compound III</button>
+                    <button type="button" class="btn btn-outline-primary">Compound II</button>
+                    <button type="button" class="btn btn-primary text-white" aria-current="page">Compound III</button>
                 </div>
                 <div class="d-none d-lg-block ms-4">
                     <button class="btn btn-primary text-white shadow-sm" type="button"><i class="bi bi-wallet me-1"></i> 0x23....46ac</button>
