--- a/template/template.html
+++ b/template/template.html
@@ -18,7 +18,7 @@
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav d-flex d-lg-none">
+                <ul class="navbar-nav d-flex d-lg-none py-3">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Borrow</a>
                     </li>
