Template : mobile view

--- a/template/template.html
+++ b/template/template.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="nav-link" href="#">Farm</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Claim</a></li>
                 </ul>
-                <div class="btn-group shadow-sm ms-auto" role="group">
+                <div class="btn-group shadow-sm ms-auto my-2 my-lg-auto" role="group">
                     <button type="button" class="btn btn-outline-primary">Compound II</button>
                     <button type="button" class="btn btn-primary text-white" aria-current="page">Compound III</button>
                 </div>
