Add claim all rewards button

--- a/css/template.scss
+++ b/css/template.scss
@@ -103,6 +103,10 @@ body { overflow-y: scroll; }
     @include item-hover();
 }
 
+.color-primary-shaded {
+    color: shade-color($primary, 5%) !important;
+}
+
 /* FARM */
 .asset-item {
     @include item-hover();
