--- a/template/template.html
+++ b/template/template.html
@@ -40,7 +40,7 @@
         <div class="row">
             <div id="sidebar-container" class="col-lg-2 d-none d-lg-block bg-white border-end shadow">
                 <div id="sidebar-inner" class="d-flex flex-column p-3 pt-5">
-                    <button id="network-select" type="button" class="btn btn-light btn-lg border shadow-sm">
+                    <button id="network-select" type="button" class="btn btn-light btn-lg border shadow-sm rounded-5">
                         <div class="d-flex">
                             <img class="icon d-none d-xl-inline" src="../image/Ethereum.svg" alt="network">
                             <div class="flex-grow-1">Ethereum</div>
