--- a/template/template.5.html
+++ b/template/template.5.html
@@ -47,7 +47,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid" style="margin-top: 3rem;">
+    <div class="container-fluid px-4" style="margin-top: 3rem;">
         
         <div class="row">
             <div class="col-2 d-none d-xl-flex flex-column">
