--- a/template/template.3.html
+++ b/template/template.3.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-xl sticky-top bg-white border-bottom shadow-sm py-3">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="../image/compound-logo.svg" alt="Compound" width="185">
+                <img src="../image/compound-logo.svg" alt="Compound" width="180">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,16 +25,16 @@
                     <li class="nav-item"><a class="nav-link" href="#">Farm</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Claim</a></li>
                 </ul>
-                <div class="d-none d-xl-flex justify-content-evenly flex-grow-1 text-center">
-                    <div class="shadow-sm rounded p-2 py-1" style="min-width: 8rem;">
+                <div class="d-none d-xl-flex mx-auto text-center">
+                    <div class="px-5">
                         <div class="fw-semibold">Total collateral</div> 
                         <div class="text-body-tertiary">$543.12M</div>
                     </div>
-                    <div class="shadow-sm rounded p-2 py-1" style="min-width: 8rem;">
+                    <div class="px-5">
                         <div class="fw-semibold">Total borrowing</div> 
                         <div class="text-body-tertiary">$345.78M</div>
                     </div>
-                    <div class="shadow-sm rounded p-2 py-1" style="min-width: 8rem;">
+                    <div class="px-5">
                         <div class="fw-semibold">Total farming</div> 
                         <div class="text-body-tertiary">$480.78M</div>
                     </div>
@@ -52,7 +52,7 @@
         <div class="row">
             <div class="col-2 d-none d-xl-flex flex-column">
 
-                <div class="sticky-top-menu2">
+                <div class="sticky-top-menu">
                     <button id="network-select" type="button" class="btn btn-light bg-body btn-lg border shadow w-100 rounded-5" style="margin-bottom: 2rem">
                         <div class="d-flex justify-content-around fs-5">
                             <img class="icon d-none d-xl-inline" src="../image/Ethereum.svg" alt="network">
@@ -101,7 +101,7 @@
             </div>
 
             <div class="col-12 col-xl-2">
-                <div class="sticky-top-menu2 bg-body p-4 border rounded shadow text-center rounded-4">
+                <div class="sticky-top-menu bg-body p-4 border rounded shadow text-center rounded-4">
                     <h4 class="mb-4">Your account</h4>
                     <div class="d-flex justify-content-between mb-3 small">
                         <div class="">
