--- a/template/template.4.html
+++ b/template/template.4.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-xl sticky-top bg-white border-bottom shadow-sm py-3">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="../image/compound-logo.svg" alt="Compound" width="185">
+                <img src="../image/compound-logo.svg" alt="Compound" width="180">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,21 +25,21 @@
                     <li class="nav-item"><a class="nav-link" href="#">Farm</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Claim</a></li>
                 </ul>
-                <div class="d-none d-xl-flex justify-content-evenly flex-grow-1 text-center">
-                    <div class="shadow-sm rounded p-2 py-1" style="min-width: 8rem;">
+                <div class="d-none d-xl-flex mx-auto text-center">
+                    <div class="px-5">
                         <div class="fw-semibold">Total collateral</div> 
                         <div class="text-body-tertiary">$543.12M</div>
                     </div>
-                    <div class="shadow-sm rounded p-2 py-1" style="min-width: 8rem;">
+                    <div class="px-5">
                         <div class="fw-semibold">Total borrowing</div> 
                         <div class="text-body-tertiary">$345.78M</div>
                     </div>
-                    <div class="shadow-sm rounded p-2 py-1" style="min-width: 8rem;">
+                    <div class="px-5">
                         <div class="fw-semibold">Total farming</div> 
                         <div class="text-body-tertiary">$480.78M</div>
                     </div>
                 </div>
-                <div class="d-none d-lg-block">
+                <div class="d-none d-lg-block ms-4">
                     <button class="btn btn-primary text-white shadow-sm" type="button"><i class="bi bi-wallet me-1"></i> 0x23....46ac</button>
                     <button class="btn btn-primary text-white shadow-sm" type="button"><i class="bi bi-power"></i></button>
                 </div>
@@ -52,7 +52,7 @@
         <div class="row">
             <div class="col-2 d-none d-xl-flex flex-column">
 
-                <div class="sticky-top-menu2">
+                <div style="position: sticky; top: 8rem;">
                     <button id="network-select" type="button" class="btn btn-light bg-body btn-lg border shadow w-100 rounded-5" style="margin-bottom: 2rem">
                         <div class="d-flex justify-content-around fs-5">
                             <img class="icon d-none d-xl-inline" src="../image/Ethereum.svg" alt="network">
@@ -61,7 +61,7 @@
                         </div>
                     </button>
 
-                    <div class="bg-body px-3 py-4 border rounded-4 shadow" style="margin-bottom: 2.5rem;">
+                    <div class="bg-body p-3 border rounded-4 shadow" style="margin-bottom: 2.5rem;">
                         <ul class="nav nav-pills flex-column mb-auto">
                             <li class="nav-item"><a class="nav-link" href="#/"><i class="bi bi-box-arrow-down me-1"></i> Borrow</a></li>
                             <li class="nav-item"><a class="nav-link active" aria-current="page" href="#/farm"><i class="bi bi-flower2 me-1"></i> Farm</a></li>
@@ -81,27 +81,55 @@
             </div>
 
 
-            <div class="col-12 col-xl-8">
+            <div class="col-12 col-xl-8 d-flex align-items-start">
 
-                <div class="bg-body p-3 rounded border shadow mb-4">
-                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                <div class="bg-body p-3 rounded border shadow mx-auto mb-4">
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet</p>
                 </div>
 
             </div>
 
             <div class="col-12 col-xl-2">
-                <div class="sticky-top-menu2 bg-body p-4 border rounded shadow text-center rounded-4">
+                <div class="bg-body p-4 border rounded shadow text-center rounded-4" style="position: sticky; top: 8rem;">
                     <h4 class="mb-4">Your account</h4>
                     <div class="d-flex justify-content-between mb-3 small">
                         <div class="">
